k8s/infrastructure/traefik-internal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-clusterip
spec:
  type: ClusterIP
  ports:
    - name: traefik
      port: 9000
      targetPort: traefik
