k8s/infrastructure/traefik-internal/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("traefik-internal.mchill.io")
      kind: Rule
      services:
        - name: traefik-clusterip
          port: 9000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-internal
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("traefik.mchill.lan", "traefik-internal.mchill.lan")
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
